# personal-history-db

./: .gitignore  001_init.sql  002_conversation_generalization.sql  003_health_sidecars.sql  004_bookmarks.sql  005_connections.sql  ADAPTERS.md  AGENTS.md  AI_SESSIONS_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT-SCHEMA.md  DB_SCHEMA.md  DECISIONS.md  GEMINI.md  INVENTORY.md  LICENSE  MCP-CONTRACT.md  PARSER_PLUGIN_GUIDE.md  PORT_LOG.md  README.md  REWRITE_PLAN.md  SCHEMA_RESHAPE_PLAN.md  ingest_apple_notes_full.py.preEdit  pyproject.toml  requirements.txt  server.py
.agents/skills/speckit-plan/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: coverage_domains.toml  decay_policy.toml  skill_graph.toml
docs/: RECORDS.md  SKILL_GRAPH.md  architecture.md  configuration.md  fresh-start.md  migration-v0.4.md  plugins.md  writing-an-adapter.md
docs/adapter-specs/: mbox-spec.md
docs/agent-prompts/: adapter-architect.md  fixture-generator.md  gemini-prompt-scripter.md  golden-diff-validator.md  schema-enforcer.md
docs/ai-sessions-plan/: BOUNDARY_DERIVER_AGENT.md  BOUNDARY_TABLE.md  INVENTORY.md  PORT_LOG.md
docs/gemini-prompts/: README.md
docs/gemini-prompts/ai-sessions/: README.md
instance-template/: README.md  atoms.toml  embedding.toml  identity.toml  paths.toml  sources.toml
scripts/: backfill_commit_authorship.py  extract_frontmatter_triples.py  ingest_tasks_plans.py  migrate_safari_web_pages.py  qwen_summarize_backfill.py  render_predicate_stubs.py  scaffold_adapter.py  scaffold_plugin.py  skill_graph_pilot.py  snapshot_db.py
scripts/migrations-rollback/: 0012_predicate_table.sql  README.md
specs/queue/: 001-apple_dbs.md  002-google_activity.md  003-mbox.md  004-imessage.md  005-discord.md  006-google_voice.md  007-phone_sms.md  008-sms_xml.md  009-phone_calls_xml.md  010-chat_logs.md  011-claude_chat.md  012-claude_code.md  013-facebook_unified.md  014-facebook_connections.md  015-google_contacts.md  016-apple_health.md  017-apple_health_backup.md  018-google_fit.md  019-strong.md  020-spotify.md  021-goodreads.md  022-amazon.md  023-apple_notes_full.md  024-articles.md  025-clippings.md  026-staged_md.md  027-google_drive.md  028-onedrive.md  029-calendar.md  030-google_timeline.md  031-phone_photos.md  100-wpef-followon-bookmark-triples.md  101-wpef-followon-bookmark-column-cleanup.md  102-future-readaction-pocket-instapaper.md  README.md
src/phdb/: __init__.py  __main__.py  authorship.py  cli.py  db.py  embed_pipeline.py  embed_provider.py  embed_service.py  file_revisions.py  identity.py  log.py  query.py  scoring.py  settings.py  triples.py  validation.py  vault_notes.py  writelock.py
src/phdb/adapters/: _facebook_utils.py  amazon.py  apple_dbs.py  apple_health.py  apple_health_backup.py  apple_notes_full.py  articles.py  base.py  calendar.py  chat_logs.py  claude_chat.py  claude_code.py  clippings.py  discord.py  facebook.py  facebook_connections.py  facebook_posts.py  facebook_residuals.py  facebook_unified.py  gemini_scribe.py  gemini_web.py  goodreads.py  google_activity.py  google_contacts.py  google_drive.py  google_fit.py  google_timeline.py  google_voice.py  imessage.py  loader.py  mbox.py  onedrive.py  phone_calls_xml.py  phone_photos.py  phone_photos_metadata.py  phone_sms.py  raindrop.py  sms_xml.py  spotify.py  staged_md.py  (+4 more)
src/phdb/atoms/: registry.py
src/phdb/core/: __init__.py  db.py  embed.py  graph.py  lookup.py  plugin_loader.py  registry.py  scoring.py  search.py  source_files.py
src/phdb/dissolutions/: __init__.py  backfill_known_waves.py  detect.py  materializer_log.py
src/phdb/facets/: __init__.py  _coalescence_lib.py  _review_queue.py  base.py
src/phdb/formats/: __init__.py  _frontmatter.py  amazon_zip.py  apple_dbs_sqlite.py  apple_health_backup.py  apple_health_xml.py  apple_notes_sqlite.py  articles_md.py  bookmark_upserts.py  chat_logs_text.py  chat_upserts.py  claude_chat_json.py  claude_code_jsonl.py  clippings_md.py  consumed_media_md.py  conversation_upserts.py  discord_dce_json.py  discord_json.py  document_extract.py  email_upserts.py  facebook_connections_html.py  facebook_html.py  goodreads_csv.py  google_activity_html.py  google_drive_zip.py  google_fit_json.py  google_timeline_json.py  ical.py  (+16 more)
tests/: conftest.py  test_adapter_base.py  test_adapter_loader.py  test_amazon_adapter.py  test_apple_dbs_adapter.py  test_apple_health_adapter.py  test_apple_notes_full_adapter.py  test_articles_adapter.py  test_atoms.py  test_bookmark_triple_emission.py  test_browser_bookmarks_plugin.py  test_calendar_adapter.py  test_chat_logs_adapter.py  test_chunking.py  test_claude_chat_adapter.py  test_claude_code_adapter.py  test_cli.py  test_clippings_adapter.py  test_db.py  test_discord_adapter.py  test_dissolutions.py  test_embed_pipeline.py  test_embed_provider.py  test_embed_service.py  test_facebook_adapter.py  test_facebook_connections_adapter.py  test_facebook_posts_adapter.py  test_facebook_residuals_adapter.py  test_facet_review_cli.py  test_facets_framework.py  test_facets_people_coalescence.py  test_facets_places_coalescence.py  test_gemini_scribe_adapter.py  test_gemini_web_adapter.py  test_goodreads_adapter.py  test_google_activity_adapter.py  test_google_contacts_adapter.py  test_google_drive_adapter.py  test_google_fit_adapter.py  test_google_search_plugin.py  (+55 more)
tests/fixtures/: README.md  _build_edge_cases.py  _write_edge_cases.py  basic.expected.json  basic.mbox  bulk.expected.json  bulk.mbox  chrome_history_sample.json  direction.expected.json  direction.mbox  edge_cases.expected.json  edge_cases.mbox  generate_amazon_zip.py  generate_binary_fixtures.py  generate_discord_zip.py  generate_google_drive_zip.py  generate_mbox.py  generate_strong_db.py  gmail.expected.json  gmail.mbox  google_search_sample.html  youtube_search_sample.html  youtube_subscriptions_sample.csv  youtube_watch_sample.html
tests/formats/: test_discord_dce_json.py
tests/plugins/: test_chrome_history.py
(+334 files in other folders)
