[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-history-db"
version = "0.4.0b0"
description = "A framework for ingesting, indexing, and querying personal digital history across dozens of source formats."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "<owner-name>" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "html2text>=2024.2",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
docs = [
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
phdb = "phdb.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
