[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-history-db"
version = "0.4.0"
description = "A framework for ingesting, indexing, and querying personal digital history across dozens of source formats."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Rob Fischer" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "html2text>=2024.2",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
docs = [
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
]
photos = ["Pillow>=10.0"]
service = ["watchdog>=4.0"]
server = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/robfischer1/personal-history-db"
Repository = "https://github.com/robfischer1/personal-history-db"
Issues = "https://github.com/robfischer1/personal-history-db/issues"
Changelog = "https://github.com/robfischer1/personal-history-db/blob/main/CHANGELOG.md"
Documentation = "https://github.com/robfischer1/personal-history-db/tree/main/docs"

[project.scripts]
phdb = "phdb.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# Plugin subclasses widen ingest_row with keyword-only args (source_file_id,
# settings, thread ids, etc.). The ABC signature uses **kwargs to accept the
# pattern, but mypy strict mode still flags additional keyword-only params
# in overrides as Liskov violations. The trade-off is intentional: the plugin
# protocol is structurally "ingest one record" with caller-supplied context.
[[tool.mypy.overrides]]
module = "phdb.plugins.*"
disable_error_code = ["override"]

# Test files are type-checked but not strict — suppress annotation
# requirements and known test-pattern false positives.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["attr-defined", "arg-type", "type-arg", "union-attr", "index", "var-annotated", "operator", "misc", "override", "assignment", "unused-ignore"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
